--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AngularJS Binding</title>
+    <title>installr</title>
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
     <div ng-app="app">
-      <nav>
+      <nav class="teal lighten-1">
         <div class="nav-wrapper">
           <div class="container">
             <a href="#" class="brand-logo">installr</a>
@@ -24,11 +24,17 @@
         </div>
 
         <div id="main">
-
-          <div class="input-field col s6">
-            <input id="query" type="text" ng-model="query" class="validate">
-            <label for="query">Search for apps...</label>
-          </div>
+          <nav class="teal lighten-1">
+            <div class="nav-wrapper">
+              <form>
+                <div class="input-field">
+                  <input id="query" type="search" ng-model="query" required>
+                  <label for="query"><i class="mdi-action-search"></i></label>
+                  <i class="mdi-navigation-close" ng-click="query=''"></i>
+                </div>
+              </form>
+            </div>
+          </nav>
 
           <p ng-if="!query || query.length < 3">Start typing...</p>
           <p ng-if="(apps | customFilter:this).length == 0">No results</p>
@@ -52,6 +58,7 @@
         </div>
       </div>
     </div>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular.min.js"></script>
     <script type="text/javascript" src="js/checklist-model.js"></script>
